# doomseeker-unofficial

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  COMPILE.Windows.txt  COMPILE.txt  Dockerfile  LICENSE.json  README.md  bitbucket-pipelines.yml  doxygen.doomseeker  doxygen.wadseeker  make-doc.sh
bzip2/: CMakeLists.txt  bzlib_private.h
dependencies/bzip2/: CHANGES  CMakeLists.txt
src/: CMakeLists.txt  PluginFooter.txt  PluginHeader.txt  apprunner.cpp  apprunner.h  customservers.cpp  customservers.h  datapaths.cpp  datapaths.h  doomseekerfilepaths.cpp  doomseekerfilepaths.h  global.h  ini.cpp  ini.h  ip2c.cpp  ip2c.h  ip2cparser.cpp  ip2cparser.h  ip2cupdater.cpp  ip2cupdater.h  log.cpp  log.h  main.cpp  main.h  masterclient.cpp  masterclient.h  mastermanager.cpp  mastermanager.h  messageresult.h  pathfinder.cpp  pathfinder.h  plugin.h  qtmetapointer.h  random.cpp  random.h  refresher.cpp  refresher.h  server.cpp  server.h  strings.cpp  (+3 more)
src/chocolate-doom/: CMakeLists.txt  chocolatedoombinaries.cpp  chocolatedoombinaries.h  chocolatedoomgamerunner.cpp  chocolatedoomgamerunner.h  chocolatedoommain.cpp  chocolatedoommain.h  chocolatedoommasterclient.cpp  chocolatedoommasterclient.h  chocolatedoomserver.cpp  chocolatedoomserver.h  engineChocolateDoomConfig.cpp  engineChocolateDoomConfig.h  engineChocolateDoomConfig.ui
src/configuration/: doomseekerconfig.cpp  doomseekerconfig.h
src/core/: CMakeFileListing.cmake  CMakeFileListing.txt  CMakeLists.txt  CMakeSpawnFileListing.cmake  application.cpp  application.h  apprunner.cpp  apprunner.h  clipboard.cpp  clipboard.h  cmdargshelp.cpp  cmdargshelp.h  commandline.cpp  commandline.h  commandlinetokenizer.cpp  commandlinetokenizer.h  connectionhandler.cpp  connectionhandler.h  customservers.cpp  customservers.h  datapaths.cpp  datapaths.h  datastreamoperatorwrapper.cpp  datastreamoperatorwrapper.h  doomseekerfilepaths.cpp  doomseekerfilepaths.h  doxygen.dox  dpointer.h  dptr.h  filefilter.cpp  filefilter.h  fileutils.cpp  fileutils.h  gamedemo.cpp  gamedemo.h  global.h  ini.cpp  ip2c.cpp  ip2c.h  ip2cparser.h  (+47 more)
src/core/ini/: ini.h  (+9 more)
src/gui/: aboutDlg.cpp  aboutDlg.h  aboutDlg.ui  cfgAppearance.cpp  cfgAppearance.h  cfgAppearance.ui  cfgFilePaths.cpp  cfgFilePaths.h  cfgFilePaths.ui  cfgQuery.cpp  cfgQuery.h  cfgQuery.ui  cfgcustomservers.cpp  cfgcustomservers.h  cfgcustomservers.ui  cfgip2c.cpp  cfgip2c.h  cfgip2c.ui  commonGUI.cpp  commonGUI.h  configBase.h  configureDlg.cpp  configureDlg.h  configureDlg.ui  copytextdlg.h  copytextdlg.ui  createserver.cpp  createserver.h  createserver.ui  demomanager.cpp  demomanager.h  dockBuddiesList.cpp  dockBuddiesList.h  dockBuddiesList.ui  dockserverinfo.cpp  dockserverinfo.h  dockserverinfo.ui  engineConfigBase.cpp  engineConfigBase.h  engineConfigBase.ui  (+42 more)
src/huffman/: bitwriter.cpp  bitwriter.h  codec.h  huffcodec.cpp  huffcodec.h  huffman.cpp  huffman.h
src/irc/: ircadapterbase.h  ircchanneladapter.cpp  ircchanneladapter.h  ircchatadapter.cpp  ircchatadapter.h  ircclient.cpp  ircclient.h  ircdelayedoperationlist.cpp  ircglobal.cpp  ircglobal.h  ircglobalmessages.cpp  ircglobalmessages.h  ircmessageclass.cpp  ircmessageclass.h  ircnetworkadapter.cpp  ircnetworkadapter.h  ircnetworkconnectioninfo.h  ircnetworkentity.cpp  ircnetworkentity.h  ircprivadapter.cpp  ircprivadapter.h  ircrequestparser.cpp  ircrequestparser.h  ircresponseparser.cpp  ircresponseparser.h  ircuserinfo.cpp  ircuserinfo.h  ircuserlist.cpp  ircuserlist.h
src/md5/: global.h  md5.h  md5c.c  mddriver.c
src/odamex/: CMakeLists.txt  engineOdamexConfig.cpp  engineOdamexConfig.h  engineOdamexConfig.ui  odamex.xpm  odamexbinaries.cpp  odamexbinaries.h  odamexgameinfo.cpp  odamexgamerunner.cpp  odamexgamerunner.h  odamexmain.cpp  odamexmain.h  odamexmasterclient.cpp  odamexmasterclient.h  odamexserver.cpp  odamexserver.h
src/plugins/: CMakeLists.txt  PluginFooter.cmake  PluginFooter.txt  PluginHeader.cmake  PluginHeader.txt  Translation.cmake  Translation.txt
src/sdeapi/: config.cpp  config.hpp  global.hpp  pluginloader.cpp  pluginloader.hpp  scanner.cpp  scanner.hpp
src/serverapi/: binaries.cpp  binaries.h  buddyinfo.cpp  buddyinfo.h  gamerunner.cpp  gamerunner.h  gamerunnerstructs.h  player.cpp  player.h  playerslist.cpp  playerslist.h  rconprotocol.h  server.cpp  server.h  serverstructs.h  tooltipgenerator.cpp  tooltipgenerator.h
src/skulltag/: CMakeLists.txt  engineSkulltagConfig.cpp  engineSkulltagConfig.h  engineSkulltagConfig.ui  skulltagbinaries.cpp  skulltagbinaries.h  skulltaggameinfo.cpp  skulltaggamerunner.cpp  skulltaggamerunner.h  skulltagmain.cpp  skulltagmain.h  skulltagmasterclient.cpp  skulltagmasterclient.h  skulltagserver.cpp  skulltagserver.h
src/tests/: testcore.h  testdatapaths.cpp  testdatapaths.h  testini.cpp  testini.h  testruns.cpp  testruns.h  teststrings.cpp  teststrings.h
src/vavoom/: CMakeLists.txt  engineVavoomConfig.cpp  engineVavoomConfig.h  engineVavoomConfig.ui  ui_engineVavoomConfig.h  vavoombinaries.h  vavoomgameinfo.cpp  vavoomgameinfo.h  vavoomgamerunner.cpp  vavoomgamerunner.h  vavoommain.cpp  vavoommain.h  vavoommasterclient.cpp  vavoommasterclient.h  vavoomserver.cpp  vavoomserver.h
src/wadseeker/: CMakeLists.txt  InstallHeaders.cmake  dptr.h  filefind.cpp  filefind.h  freedoom.cpp  freedoom.h  html.cpp  html.h  htmlparser.h  http.cpp  http.h  ioutils.cpp  ioutils.h  link.cpp  link.h  modinstall.cpp  modinstall.h  networkreplysignalwrapper.cpp  speedcalculator.cpp  speedcalculator.h  urlparser.cpp  urlparser.h  wadseeker.cpp  wadseeker.h  wadseekerexportinfo.h  wadseekerglobals.h  wadseekermessagetype.h  wadseekerversiondefs.cmake  wadseekerversiondefs.h.in  wadseekerversioninfo.cpp  wadseekerversioninfo.h  www.cpp  www.h  wwwseeker.cpp  wwwseeker.h
src/zdaemon/: CMakeLists.txt  engineZDaemonConfig.cpp  engineZDaemonConfig.h  engineZDaemonConfig.ui  zdaemonbinaries.h  zdaemongameinfo.cpp  zdaemongameinfo.h  zdaemongamerunner.cpp  zdaemongamerunner.h  zdaemonmain.cpp  zdaemonmain.h  zdaemonmasterclient.cpp  zdaemonmasterclient.h  zdaemonserver.cpp
(+950 files in other folders)
